Update focus styles, update year

--- a/src/html/partials/_footer.html
+++ b/src/html/partials/_footer.html
@@ -8,14 +8,14 @@
         </div>
     </div>
     <div class="border-gray-600 border-t w-full md:w-500 mx-auto"></div>
-    <div class="flex flex-col sm:flex-row flex items-center justify-center pt-10 pb-5">
+    <div class="flex flex-col sm:flex-row items-center justify-center pt-10 pb-5">
         <div class="text-gray-100 text-xs sm:mr-10">
-            <p>&copy; Little Loft {{currentYear}}. All Rights Reserved.</p>
+            <p>&copy; Little Loft <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.</p>
         </div>
-        <div class="mx-2 flex justify-center items-center mt-4 sm:mt-0 -mx-2">
-            <a href="#" class="bg-white hover:bg-gray-400 focus:ring-2 focus:ring-yellow-pastel focus-visible:outline-none rounded-full px-fb py-3 mx-2"><svg class="h-6 w-3 fill-current"><use xlink:href="img/sprite.svg#facebook"></use></svg></a>
-            <a href="#" class="bg-white hover:bg-gray-400 focus:ring-2 focus:ring-yellow-pastel focus-visible:outline-none rounded-full px-3 py-3.5 mx-2"><svg class="h-5 w-6 fill-current"><use xlink:href="img/sprite.svg#twitter"></use></svg></a>
-            <a href="#" class="bg-white hover:bg-gray-400 focus:ring-2 focus:ring-yellow-pastel focus-visible:outline-none rounded-full p-3 mx-2"><svg class="h-6 w-6 fill-current"><use xlink:href="img/sprite.svg#instagram"></use></svg></a>
+        <div class="flex justify-center items-center mt-4 sm:mt-0">
+            <a href="#" class="bg-white hover:bg-yellow-pastel focus:bg-yellow-pastel focus-visible:outline-none rounded-full px-fb py-3 mx-2"><svg class="h-6 w-3 fill-current"><use xlink:href="img/sprite.svg#facebook"></use></svg></a>
+            <a href="#" class="bg-white hover:bg-yellow-pastel focus:bg-yellow-pastel focus-visible:outline-none rounded-full px-3 py-3.5 mx-2"><svg class="h-5 w-6 fill-current"><use xlink:href="img/sprite.svg#twitter"></use></svg></a>
+            <a href="#" class="bg-white hover:bg-yellow-pastel focus:bg-yellow-pastel focus-visible:outline-none rounded-full p-3 mx-2"><svg class="h-6 w-6 fill-current"><use xlink:href="img/sprite.svg#instagram"></use></svg></a>
         </div>
     </div>
 </footer>
